--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -1,28 +1,77 @@
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  margin: 0;
-  min-height: 100vh;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+		Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+	margin: 0;
+	min-height: 100vh;
+	display: flex;
+	flex-direction: column;
+	flex: 1 1 auto;
+}
+
+main {
+	display: flex;
+	flex: 1 1 auto;
 }
 
 .header {
-  height: 72px;
-  background: darkmagenta;
-  color: white;
+	height: 72px;
+	background: darkmagenta;
+	color: white;
+	font-size: 32px;
+	font-weight: 900;
+	padding: 0 16px;
+	line-height: 72px;
 }
 
 .footer {
-  height: 72px;
-  background: #eee;
-  color: darkmagenta;
+	height: 72px;
+	background: #eee;
+	color: darkmagenta;
+	position: fixed;
+	bottom: 0;
+	width: 100%;
+	z-index: -10;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 .sidebar {
-  width: 300px;
-  background: royalblue;
+	width: 300px;
+	background: royalblue;
+	font-size: 24px;
+	padding: 16px;
+	flex: 1 0 auto;
+	z-index: -100;
+}
+
+.cards {
+	padding: 32px;
+	display: flex;
+	flex-wrap: wrap;
+	flex: 1 1 auto;
 }
 
 .card {
-  border: 1px solid #eee;
-  box-shadow: 2px 4px 16px rgba(0,0,0,.06);
-  border-radius: 4px;
+	border: 1px solid #eee;
+	box-shadow: 2px 4px 16px rgba(0, 0, 0, 0.06);
+	border-radius: 4px;
+	width: 300px;
+	margin: 32px;
+	background-color: white;
+}
+
+li {
+	list-style: none;
+}
+
+a {
+	color: white;
+	text-decoration: none;
 }
